--- a/package.json
+++ b/package.json
@@ -11,12 +11,18 @@
   "license": "ISC",
   "dependencies": {
     "@sendgrid/mail": "^6.5.3",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
+    "mongoose": "^5.9.7",
     "nodemailer": "^6.4.6",
     "nylas": "^4.10.0",
     "twilio": "^3.39.5",
     "validator": "^12.2.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.3"
   }
 }
